# Fortgeschrittene_Programmierung

./: .gitignore  README.md  performance.csv  requirements_for_tests.txt  setup.py
dev/: performance.csv  time.txt
dev/references/: others.txt
dev/tests/: 2_compare_analytic.py  3_nonlinear_pendulum.py  5_performance.py  6_accuracy.py  7_trigger_exceptions_in_C.py  accuracy.py  compare_analytic.py  compare_analytic_out.py  import_test.py  nonlinear_pendulum.py  performance.py  performance_argv.py  plot_examples.py  plot_examples_out.py  test_differences.py  trigger_exceptions_in_C.py
links/: Python C API.url
module.py/: pyproject.toml  setup.cfg  setup.py
module.py/C_dev/: .gdb_history  RungeKutta4.c  gdbrun  gdbrun2
module.py/numericalodes/: RungeKutta4Py.c  matrix.h  numericalodes.c  vector.h
module.py/numericalodes.egg-info/: PKG-INFO  SOURCES.txt
module.py/numericalodes/numericalodes.egg-info/: SOURCES.txt
module.py/output/: game3.csv
module.py/tests/: test_c.c  test_c_api.py  test_c_csv.py
numericalodes/: Makefile  RungeKutta4.c  RungeKutta4.h  RungeKutta4Vector.py  __init__.py  array.csv  broadcast.c  broadcast.h  matrix.c  matrix.h  numericalodes.ctodo  py.py  setup.py  test.py  test_c.c  test_c.py  test_py._c  transpose.c  transpose.h  vector.c  vector.h
protocol.latex/: notes.txt  numericalodes.tex  shared_preamble.tex  time.txt
references/: C++ (Cpp) PyArg_ParseTuple Examples - HotExamples.url  PyArg_ParseTuple type =.url  call C++ function in C.url  call function with va_list.url  include Python.h.url  matrix in C.url
(+78 files in other folders)
