# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numericalodes"
version = "0.1"
description = "C Extension Module to calculate systems of ODEs numeracally similar to scipy.integrate.solve_ipv. This is a learning project for the Technical University of Graz"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Andreas Zach", email = "andreas.zach@student.tugraz.at"}]
urls = {"Website" = "https://github.com/zandivx/numericalodes"}
